fix: scrollbar css (#977)

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -9,7 +9,8 @@
 } */
 
 ::-webkit-scrollbar {
-    width: 7px;
+    width: 8px;
+    height: 8px;
 }
 ::-webkit-scrollbar-track {
     background: #fafafa;
